47
================

30/04/23 wordkeys: OriginalOwnerIDNumber/CurrentOwnerIDNumber/ReservedOwnerIDNumber
30/04/23 merge_person_details, include couple fields, optimise for single query
29/04/23 clone_from_template: if calculated date < today, use today
29/04/23 Validation for second email field #741
28/04/23 Merge new person fields/DOB/ID when merging details #1257
28/04/23 Fix bug in report SQL syntax checker when using CURRENT_DATE+/-
28/04/23 Add new person fields to wordprocessor tokens #1270
27/04/23 Ability to suffix report columns with N2BR to replace linebreaks
26/04/23 Person date of birth/id number fields #1257
24/04/23 Option to populate couple fields from online forms #1264
24/04/23 Check couple fields for similar when adding new people #741
23/04/23 Translate null ownertypes to individual #741
22/04/23 Attempt to remove incoming processed forms when browser window closes
21/04/23 Mobile interface, take photo and convert to PDF #929
20/04/23 Use configuration item to control name/couple format #741
20/04/23 Show count of records displayed in waiting list
20/04/23 Add location filter to photo uploader #1249
20/04/23 person_similar was checking incoming mobile against home, incorrectly
19/04/23 Second contact fields for people #741
17/04/23 Use map link for incidents, make sure it opens in app on Android/iOS #101
15/04/23 Fix bug where the wrong incident number was shown on citations
13/04/23 reinstall_default_data only needs to clear lookup tables
11/04/23 Re-implementation of mobile photo uploader #1249
10/04/23 Add Warning/OwnerWarning wordkeys to access warning content
07/04/23 Fix email templates when emailing ACO from incident
06/04/23 Add person: similar check in case they put cell phone in home phone #1170
03/04/23 URI encode links properly for QRLink/QRShare in document templates
30/03/23 Truncate online form fields headed to short text columns
29/03/23 Fix formatting bug where Move->Reclaim an animal would not create costs